[package]
name = "lazytool"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["wxnacy@gmail.com"]
description = "Rust lazy toolkit"
repository = "https://github.com/wxnacy/lazytool"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
chrono-tz = "0.10.0"
once_cell = "1.20.3"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
